# breezemate

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml
scripts/: _regen_icon.py  smoke_agent_window_bg.py  smoke_agents.py  smoke_capture_lock.py  smoke_force_commit.py  smoke_installer.py  smoke_pipeline_restart.py  smoke_scroll_math.py  smoke_subtitle_dedup.py  smoke_ui_responsiveness.py
src/rt_translator/: __init__.py  __main__.py  audio_capture.py  cli.py  config.py  console_sink.py  device_picker.py  events.py  paths.py  pipeline.py  secrets.py
src/rt_translator/agents/: __init__.py  base.py  context.py  interviewee.py  registry.py  supplement.py
src/rt_translator/gui/: __init__.py  agent_window.py  app.py  main_window.py  pipeline_controller.py  settings_dialog.py  signal_sink.py  subtitle_window.py
src/rt_translator/providers/: __init__.py  base.py  presets.py
src/rt_translator/providers/asr/: __init__.py  local_vosk.py  openai_realtime.py  vosk_full.py  vosk_model.py
src/rt_translator/providers/llm/: __init__.py  openai_compatible.py
tools/: breezemate.spec  breezemate_launcher.py  build_installer.py  version_info.txt
tools/installer/: installer_main.py  setup.spec  uninstall.spec  uninstaller_main.py  version_info_setup.txt  version_info_uninstall.txt
